@@ -2,6 +2,15 @@
 
        Build fix. No review needed.
 
+        * rendering/RenderThemeWin.cpp:
+        (WebCore::RenderThemeWin::paintSearchFieldCancelButton):
+        (WebCore::RenderThemeWin::paintSearchFieldResultsDecoration):
+        (WebCore::RenderThemeWin::paintSearchFieldResultsButton):
+
+2009-11-19  Beth Dakin  <bdakin@apple.com>
+
+       Build fix. No review needed.
+
         * plugins/PluginView.cpp:
         (WebCore::PluginView::paintMissingPluginIcon):
 
